@@ -1,3 +1,9 @@
+Tue Mar 24 19:24:23 CET 1998  Eckeherad Berns  <eb@berns.prima.de>
+
+	* gnome-app-helper.c (gnome_app_do_ui_accelerator_setup): use
+	gtk_widget_install_accelerator to make the accelerators visible in
+	the menu
+
 Tue Mar 24 19:16:55 CET 1998  Eckeherad Berns  <eb@berns.prima.de>
 
 	* stock_demo.c, gnome-stock.c: use GnomePropertyBox's own signals.
